--- a/problems/list.tex
+++ b/problems/list.tex
@@ -1,7 +1,24 @@
 \section{Примеры решения задач}
 
-\input{problems/differential}
+\fbox{
+    \begin{minipage}{0.9\linewidth}
+        Большая часть содержимого этого раздела сгенерирована. \\
+        Стоит обращать внимание на общие методы решения, а не на числовые выкладки.
+    \end{minipage}
+}
+
+\input{problems/analysis}
 \newpage
 \input{problems/probability}
+\newpage
+\input{problems/comb}
+\newpage
+\input{problems/linear}
+\newpage
+\input{problems/logic}
+\newpage
+\input{problems/harmonic}
+\newpage
+\input{problems/differential}
 \newpage
 \input{problems/statistics}
