--- a/problems/probability.tex
+++ b/problems/probability.tex
@@ -1,6 +1,6 @@
 \subsection{Теория вероятностей}
 
-\subsubsection{Формула Байеса}
+\subsubsection{5. Формула Байеса}
 
 \textbf{Условие.} На заводе есть три станка А, В и С, выпускающие деталь одного типа. На станке А делается 50\% всех деталей, на станке В — 30\%, на станке С — 20\%. Доля бракованных деталей на станке А составляет 3\%, на станке В — 2\%, на станке С — 1\%. Найти вероятность того, что выпущенная на заводе бракованная деталь сделана на станке А.
 
@@ -44,7 +44,7 @@
 
 \textbf{Ответ:} $\dfrac{15}{23} \approx 0{,}652$.
 
-\subsubsection{Формула полной вероятности}
+\subsubsection{6. Формула полной вероятности}
 
 \textbf{Условие.} В корзине 5 теннисных мячей: 3 новых и 2 старых (тех, которыми уже играли). Первый теннисист взял 2 мяча, поиграл ими и положил обратно в корзину. Потом пришёл второй теннисист и взял один мяч. Найти вероятность того, что этот мяч новый.
 
