--- a/solutions/analysis/1.tex
+++ b/solutions/analysis/1.tex
@@ -1,6 +1,6 @@
 \subsection{Теорема Больцано-Вейерштрасса и критерий Коши сходимости числовой последовательности.}
 
-\subsubsection{Теорема Больцано-Вейерштрасса}
+\textbf{Теорема Больцано-Вейерштрасса}
 
 \Def Числовую последовательность $\{x_n\}$ будем называть ограниченной, если $\exists M > 0: \forall n \in \N \hookrightarrow |x_n| \leq M$.
 
@@ -54,7 +54,7 @@ $\{x_n\}$ - ограниченная числовая последователь
 
 \Endproof
 
-\subsubsection{Критерий Коши}
+\textbf{Критерий Коши}
 
 \Def Пусть дана числовая последовательность $\{x_n\}$. Будем говорить, что она фундаментальна, если
 \begin{equation*}
