--- a/solutions/analysis/3.tex
+++ b/solutions/analysis/3.tex
@@ -5,6 +5,8 @@
 
 \Proof
 
+\textbf{Вариант 1}
+
 Положим $\mathcal{I}^0 := [a, b]$. Пусть $c_1 = \frac{a + b}{2}$. Легко видеть, что:
 \begin{equation*}
     \left[
@@ -39,6 +41,20 @@
     y^* = \lim\limits_{n \to \infty} f(a_n) = \lim\limits_{n \to \infty} f(b_n) = f(x^*) = y^*
 \end{equation*}
 
+\textbf{Вариант 2}
+
+Без ограничения общности считаем $f(a)\le y^*\le f(b)$ (иначе меняем $a$ и $b$ местами).
+Рассмотрим множество
+\[
+S=\{x\in[a,b]:\ f(x)\le y^*\}.
+\]
+Оно непусто (так как $a\in S$) и ограничено сверху, значит существует $x^*=\sup S\in[a,b]$.Покажем, что $f(x^*)=y^*$.
+\begin{itemize}
+    \item Если бы $f(x^*)<y^*$, то по непрерывности $f$ нашлась бы окрестность $U_\delta(x^*)$, на которой $f(x)<y^*$, и тогда для некоторых $x>x^*$ тоже было бы $x\in S$, что противоречит тому, что $x^*$ — верхняя грань $S$.
+    \item Если бы $f(x^*)>y^*$, то по непрерывности $f$ нашлась бы окрестность $U_\delta(x^*)$, на которой $f(x)>y^*$, и тогда точки $x<x^*$, достаточно близкие к $x^*$, не попадали бы в $S$, что противоречит определению супремума (в $S$ должны находиться элементы сколь угодно близко к $x^*$ слева).
+\end{itemize}
+Значит, $f(x^*)=y^*$.
+
 \Endproof
 
 \Def Всякий интервал, отрезок, полуинтервал на числовой прямой мы будем называть промежутком.
@@ -52,6 +68,6 @@
 
 По определению инфимума $\exists a' \in \lfloor a, b\rceil: f(a') < y^*$, аналогично, по определению супремума $\exists b' \in \lfloor a, b\rceil: y^* < f(b')$.
 
-Заметим, что $[a', b'] \subset (m, M)$, значит $f \in C([a', b'])$, а также $f(a') < y^* < f(b')$. Значит, по теореме Больцано-Коши, получаем требуемое.
+Так как $a',b'\in \lfloor a,b\rceil$, то отрезок $[a',b']$ (или $[b',a']$) также лежит в $\lfloor a,b\rceil$, и $f$ непрерывна на нём. При этом $f(a') < y^* < f(b')$, значит по теореме Больцано--Коши найдётся $x^*$ между $a'$ и $b'$ такое, что $f(x^*)=y^*$.
 
 \Endproof
