--- a/solutions/analysis/4.tex
+++ b/solutions/analysis/4.tex
@@ -60,11 +60,11 @@ $f$ дифференцируема в $x_0$, тогда $0 \leq f'_-(x_0) = f'(x
 
 Случай $f \overset{[a, b]}{\equiv} C, C \in \R$ тривиален. Поэтому будем считать функцию неконстантой.
 
-В силу непрерывности на отрезке, $f$ достигает наибольшего значения на нём, обозначим эту точку $\xi \in [a, b]$. $\xi$ - является точкой локального экстремума для $f$ и в силу диффернцируемости на интервале, по теореме Ферма, получаем $f'(\xi) = 0$.
+В силу непрерывности на отрезке, $f$ достигает наибольшего и наименьшего значений на $[a,b]$. Так как $f(a)=f(b)$ и $f$ не константа, хотя бы одна из точек достижения max/min лежит внутри $(a,b)$; обозначим её $\xi\in(a,b)$. Тогда $\xi$ — точка локального экстремума и по теореме Ферма $f'(\xi)=0$.
 
 \Endproof
 
-\Theor{Коши о среднем} Пусть $f, g \in C([a, b], \R)$, $f, g$ - дифференцируемы на $(a, b)$. Также $\forall x \in (a, b) \hookrightarrow g'(x) \neq 0$. 
+\Theor{Коши о среднем} Пусть $f, g \in C([a, b], \R)$, $f, g$ - дифференцируемы на $(a, b)$. Также $g(b)\neq g(a)$ и $\forall x \in (a, b) \hookrightarrow g'(x) \neq 0$. 
 Тогда $\exists \xi \in (a, b): \frac{f(b) - f(a)}{g(b) - g(a)} = \frac{f'(\xi)}{g'(\xi)}$.
 
 \Proof
@@ -91,7 +91,7 @@ $f$ дифференцируема в $x_0$, тогда $0 \leq f'_-(x_0) = f'(x
 
 \Endproof
 
-\Theor{Лагранжа о среднем} Пусть $f \in C([a, b], \R)$, $f, g$ - дифференцируемы на $(a, b)$.
+\Theor{Лагранжа о среднем} Пусть $f \in C([a, b], \R)$ и $f$ дифференцируема на $(a, b)$.
 Тогда $\exists \xi \in (a, b): \frac{f(b) - f(a)}{b - a} = f'(\xi)$.
 
 \Proof
