--- a/solutions/analysis/6.tex
+++ b/solutions/analysis/6.tex
@@ -1,6 +1,6 @@
 \subsection{Исследование функций одной переменной при помощи первой и второй производных на монотонность, локальные экстремумы, выпуклость. Необходимые условия, достаточные условия.}
 
-\subsubsection{Монотонность}
+\textbf{Монотонность}
 
 \Th Пусть $f$ дифференцируема на $(a, b)$. Тогда
 
@@ -33,7 +33,7 @@
 
 \Note Заметим, что пункты 3 и 4 верны лишь в одну сторону. Контрпример: $f(x) = x^3$. На всей числовой прямой $f$ строго возрастает, однако $f'(0) = 0$. Из строго возрастания/убывания не следует, что производная всюду положительна/отрицательна.
 
-\subsubsection{Экстремумы}
+\textbf{Экстремумы}
 
 \Theor{Достаточное условие локального экстремума}
 
@@ -111,7 +111,7 @@
 
 \Endproof
 
-\subsubsection{Выпуклость и точки перегиба}
+\textbf{Выпуклость и точки перегиба}
 
 \Def Функция $f: (a, b) \rightarrow \R$ называется выпуклой вниз на $(a, b)$, если $\forall x_1, x_2 \in (a, b) \forall t \in [0, 1] \hookrightarrow f(tx_1 + (1-t)x_2) \leq tf(x_1) + (1-t) f(x_2)$.
 
@@ -168,7 +168,9 @@ $x_1 = x_0 - u; x_2 = x_0 + u$. $x_0 = \frac{x_1 + x_2}{2}$.
 
 \begin{gather*}    
     tf(x_1) + (1-t)f(x_2) \geq tf(x_0) + (1-t)f(x_0) + tf'(x_0)(x_1 - x_0) + (1-t)f'(x_0)(x_2-x_0) = \\ 
-    = f(x_0) + f'(x_0)((tx_1 + (1-t)x_2) + (tx_0 + (1-t)x_0)) = f(x_0) + f''(x_0) * (x_0 - x_0) = f(x_0).
+    = f(x_0) + f'(x_0)\big(t(x_1-x_0) + (1-t)(x_2-x_0)\big)
+    = f(x_0) + f'(x_0)\big((tx_1+(1-t)x_2)-x_0\big)
+    = f(x_0),
 \end{gather*}
 
 \Endproof
