--- a/solutions/analysis/7.tex
+++ b/solutions/analysis/7.tex
@@ -22,7 +22,7 @@
 
 Раз $A$ -- компакт, из $\{x_k\}$ можно выделить сходящуюся в $A$ подпоследовательность: $x_{k_j} \to c \in A$. 
 
-А так как расстояние между соответствующими членами подследовательностей стремится к 0, то, воспользовавшись неравенством треугольника, получаем, что соответствие подпоследовательности стремятся к одной точке: 
+А так как расстояние между соответствующими членами подпоследовательностей стремится к 0, то, воспользовавшись неравенством треугольника, получаем, что соответствующие подпоследовательности стремятся к одной точке: 
 
 \begin{equation*}
     \rho_X(y_{k_j}, c) \leq \rho_X(y_{k_j}, x_{k_j}) + \rho_X(x_{k_j}, c)
