--- a/solutions/analysis/8.tex
+++ b/solutions/analysis/8.tex
@@ -6,7 +6,7 @@
 
 При этом само отображение $A$ называется дифференциалом $f$ в точке $x^0$ и обозначается $d_x f$, а вектор $\overline{A}$ называется градиентом и обозначается $grad f(x_0)$ или $\nabla_{x_0} f$.
 
-\Def Пусть $l \in \R^n, x_0 \in G, f:G \to \R$. Будем говорить, что $f$ имеет производную в точке $x_0$ по направлению $l$, если
+\Def Пусть $l \in \R^n, x^0 \in G, f:G \to \R$. Будем говорить, что $f$ имеет производную в точке $x^0$ по направлению $l$, если
 
 \begin{equation*}
     \exists \lim_{t \to +0} \frac{f(x^0 + tl) - f(x^0)}{t} \in \R.
@@ -22,9 +22,9 @@
 
 \Theor{Достаточное условие дифференцируемости функции нескольких переменных в точке}
 
-Пусть $f: G \to \R$ и $\exists \delta > 0: \;\forall x \in B_\delta (x_0) \;\forall i \in \{1, \dots, n\} \;\exists \frac{\partial f}{\partial x} (x) \in \R$ и пусть $\forall i \in \{1, \dots, n\} \frac{\partial f}{\partial x_i}$ непрерывна в $x_0$ как функция от $x$.
+Пусть $f: G \to \R$ и $\exists \delta > 0: \;\forall x \in B_\delta (x^0) \;\forall i \in \{1, \dots, n\} \;\exists \frac{\partial f}{\partial x_i} (x) \in \R$ и пусть $\forall i \in \{1, \dots, n\}$ функция $\frac{\partial f}{\partial x_i}$ непрерывна в $x^0$.
 
-Тогда $f$ дифференцируема в $x_0$. 
+Тогда $f$ дифференцируема в $x^0$. 
 
 \Proof
 
@@ -65,15 +65,15 @@
 
 \Theor{Первое необходимое условие дифференцируемости (в терминах непрерывности)}
 
-Пусть $f: G \to \R$ дифференцируема в $x_0 \in G$. 
+Пусть $f: G \to \R$ дифференцируема в $x^0 \in G$. 
 
-Тогда она непрерывна в $x_0$. 
+Тогда она непрерывна в $x^0$. 
 
 \Proof Доказывается переходом к пределу при $x \to x_0$ в равенстве в определении дифференцируемости. \Endproof
 
 \Theor{Второе необходимое условие дифференцируемости (в терминах производных по направлению)}
 
-Пусть $f: G \to \R$ дифференцируема в $x_0 \in G$. 
+Пусть $f: G \to \R$ дифференцируема в $x^0 \in G$. 
 
 Тогда $\forall l \in \R^n \;\exists \frac{\partial f}{\partial l}(x^0)$, и причем $\frac{\partial f}{\partial l} (x^0) = <grad f(x^0), l>$.
 
