--- a/solutions/differential/21.tex
+++ b/solutions/differential/21.tex
@@ -15,7 +15,7 @@
 
 \Note Так же, как и в случае одного ЛОДУ с постоянными коэффициентами, множество решений системы ЛОДУ с постоянными коэффициентами является линейным пространством.
 
-\subsubsection{Случай n различных собственных векторов}
+\textbf{Случай n различных собственных векторов}
 
 \Th Пусть $v_1, \dots, v_n$ -- попарно различные собственные векторы матрицы $A$, соответствующие \textbf{необязательно попарно различным} собственным значениям $\lambda_1, \dots, \lambda_n$.
 
@@ -40,7 +40,7 @@
 Теперь покажем, что любое решение $x$ представимо в данном виде.
 
 Обозначим $x_0 \coloneqq x(0)$.
-Так как $v_1, \dots, v_n$ -- собственные векторы, соответствующие попарно различным собственным значениям, то они ЛНЗ, а значит образуют базис, по которому можно разложить $x_0$:
+Так как $v_1, \dots, v_n$ линейно независимы (в частности, это верно, если они соответствуют попарно различным собственным значениям), то они образуют базис, по которому можно разложить $x_0$:
 
 \begin{equation*}
     \exists c_1, \dots, c_n \in \Cmp: x_0 = \sum_{k=1}^n c_k v_k.
@@ -75,7 +75,7 @@
 
 А вот если у какого-то из корней алгебраическая кратность не совпадает с геометрической, то есть его кратность как корня характеристического уравнения $(A - \lambda E) = 0$ \textbf{строго больше}, чем количество соответствующих ему собственных векторов, то для нахождения общего решения необходимо использовать Жордановы цепочки, как описано ниже.
 
-\subsubsection{Жорданова нормальная форма}
+\textbf{Жорданова нормальная форма}
 
 \Def Векторы $v_1, \dots, v_n$ называются Жордановой цепочкой присоединенных, или обобщенных, векторов к собственному вектору $v_1$ матрицы $A$, соответствующему собственному значению $\lambda$, если
 
