--- a/solutions/harmonic/13.tex
+++ b/solutions/harmonic/13.tex
@@ -1,8 +1,12 @@
 \subsection{Достаточные условия сходимости тригонометрического ряда Фурье в точке.}
 
-\subsubsection{Тригонометрический ряд Фурье}
+\textbf{Тригонометрический ряд Фурье}
 
-\Lemma Пусть $f(x) = \frac{a_0}{2} + \sum_{k=1} \left(a_k \cos kx + b_k \sin kx\right)$ и этот ряд сходится равномерно на $\R$.
+\Lemma Пусть тригонометрический ряд
+\[
+f(x) = \frac{a_0}{2} + \sum_{k=1}^{\infty} \left(a_k \cos kx + b_k \sin kx\right)
+\]
+сходится равномерно на $\R$ (и тем самым задаёт непрерывную $2\pi$-периодическую функцию $f$).
 
 Тогда
 \begin{align*}
@@ -38,7 +42,10 @@ $f$, как предел равномерно сходящегося ряда и
 
 \Endproof
 
-\Def $f(x)$ называется абсолютно интегрируемой (будем обозначать $f \in |I|$), если TODO.
+\Def Функция $f$ называется \textbf{абсолютно интегрируемой} на $[a,b]$ (пишем $f \in |I|([a,b])$), если она интегрируема на $[a,b]$ и
+\[
+\int_a^b |f(x)|\,dx < +\infty.
+\]
 
 \Def Тригонометрическим рядом Фурье функции $f \in |I|$ будем называть ряд $S(x) = \frac{a_0}{2} + \sum_{k=1} \left(a_k \cos kx + b_k \sin kx\right)$ с коэффициентами, определенными выше.
 
@@ -54,7 +61,7 @@ $f$, как предел равномерно сходящегося ряда и
 
 Аналогично предыдущей теореме можно показать, что этот ряд сходится равномерно к функции $f$ только при таких коэффициентах $c_k$.
 
-\subsubsection{Ядро Дирихле. Интегральное представление частичной суммы ряда Фурье с ядром Дирихле}
+\textbf{Ядро Дирихле. Интегральное представление частичной суммы ряда Фурье с ядром Дирихле}
 
 Введем ядро Дирихле:
 
@@ -81,7 +88,7 @@ $f$, как предел равномерно сходящегося ряда и
     = \frac{1}{2\pi} \int_0^\pi \left(f(x-\tau) + f(x+\tau)\right) D_n(\tau) \;d\tau
 \end{gather*}
 
-\subsubsection{Лемма Римана об осцилляции}
+\textbf{Лемма Римана об осцилляции}
 
 Пусть $f \in |I|((a, b))$.
 
@@ -113,11 +120,26 @@ $f$, как предел равномерно сходящегося ряда и
 
 \Consequence Коэффициенты Фурье абсолютно интегрируемой функции $f$ стремятся к 0 при $n \to \infty$.
 
-\subsubsection{Принцип локализации}
+\textbf{Принцип локализации}
 
-TODO, возможно не нужен
+\Theor{Локализации}
+Пусть $f,g \in |I|([-\pi,\pi])$ — $2\pi$-периодические функции и существует $\delta>0$ такое, что $f(x)=g(x)$ при $0<|x-x_0|<\delta$.
 
-\subsubsection{Теорема Дини о достаточном условии поточечной сходимости ряда Фурье в точке}
+Тогда
+\[
+S_n^f(x_0)-S_n^g(x_0)\xrightarrow[n\to\infty]{}0.
+\]
+Иными словами, сходимость ряда Фурье в точке $x_0$ зависит только от поведения функции в сколь угодно малой окрестности $x_0$.
+
+\Proof
+Рассмотрим $h=f-g$. Тогда $h(x)=0$ при $0<|x-x_0|<\delta$ и
+\[
+S_n^h(x_0)=\frac{1}{2\pi}\int_{-\pi}^{\pi} h(x_0-t)D_n(t)\,dt.
+\]
+В этом интеграле существенный вклад идёт только от $|t|\ge\delta$, где ядро $D_n$ равномерно ограничено, а осцилляции дают $S_n^h(x_0)\to 0$ (лемма Римана--Лебега).
+\Endproof
+
+\textbf{Теорема Дини о достаточном условии поточечной сходимости ряда Фурье в точке}
 
 Обозначения:
 
@@ -152,24 +174,20 @@ TODO, возможно не нужен
 \Proof
 
 \begin{gather*}
-    \left|S_n(x_0) - \frac{f(x_0-0) + f(x_0+0)}{2}\right| = \\[20pt]
-    = \left|\frac{1}{2\pi} \int_0^\pi \frac{f(x_0-t) + f(x_0+t)}{\sin \frac{t}{2}} 
-    \sin \left((n+\frac{1}{2})t\right)\,dt 
-    - \frac{1}{2\pi} \int_0^\pi 
-    \frac{f(x_0-0) + f(x_0+0)}{2} \cdot 
-    \frac{1}{2\pi} \int_0^\pi D_n(t)\,dt\right| = \\[20pt]
-    = \left|\frac{1}{2\pi} \int_0^\pi 
-        \underbrace{
-          \underbrace{
-            \frac{(f(x_0-t)-f(x_0-0)) + (f(x_0+t)-f(x_0+0))}{t}
-          }_{\text{абсолютно сходится, т.\,к. удовлетворяет условию Дини}}
-          \cdot
-          \underbrace{
-            \frac{t}{2\sin\frac{t}{2}}
-          }_{\text{непрерывно}}
-        }_{\text{абсолютно сходится, как произведение абсолютно сходящегося на непрерывную}}
-        \cdot \sin\left((n+\tfrac{1}{2})t\right)\,dt\right|
-        \xrightarrow[\;n \to \infty\;]{\text{th. об осциляции}} 0
+    S_n(x_0)=\frac{1}{2\pi}\int_{0}^{\pi}\big(f(x_0-t)+f(x_0+t)\big)D_n(t)\,dt,\qquad
+    D_n(t)=\frac{\sin\big((n+\tfrac12)t\big)}{\sin(t/2)}.
 \end{gather*}
+
+Положим $A=\dfrac{f(x_0-0)+f(x_0+0)}{2}$. Так как $\int_0^\pi D_n(t)\,dt=\pi$, имеем
+\begin{gather*}
+    S_n(x_0)-A
+    =\frac{1}{2\pi}\int_{0}^{\pi}\Big((f(x_0-t)-f(x_0-0))+(f(x_0+t)-f(x_0+0))\Big)D_n(t)\,dt \\
+    =\frac{1}{2\pi}\int_{0}^{\pi}
+    \underbrace{\frac{(f(x_0-t)-f(x_0-0))+(f(x_0+t)-f(x_0+0))}{t}}_{\in L^1(0,\pi)\ \text{по условию Дини}}
+    \cdot
+    \underbrace{\frac{t}{2\sin(t/2)}}_{\text{непрерывно на }[0,\pi]}
+    \cdot \sin\big((n+\tfrac12)t\big)\,dt.
+\end{gather*}
+Произведение первых двух множителей принадлежит $L^1(0,\pi)$, поэтому по лемме Римана об осцилляции интеграл стремится к нулю при $n\to\infty$.
 
 \Endproof
