--- a/solutions/logic/29.tex
+++ b/solutions/logic/29.tex
@@ -4,7 +4,7 @@
 
 \Def Если считаем, что $\forall u, v \in V \; (u, v) = (v, u)$, то граф называется \textit{неориентированным}.
 
-\Def Если считаем, что $\forall u, v \in V \; (u, v) \ne (v, u)$, то граф называется \textit{ориентированным}.
+\Def Граф называется \textit{ориентированным}, если ребро задаётся \textit{упорядоченной} парой вершин: $(u,v)\in E$ и $(v,u)\in E$ — независимые ребра и могут как присутствовать одновременно, так и отсутствовать.
 
 \Def Маршрутом в графе называют последовательность $(v_1, e_1, v_2, e_2 \dots e_k, v_{k+1})$, где $v_i \in V$, $e_i = (v_i, v_{i+1}) \in E$.
 
@@ -45,15 +45,18 @@ $\square$
 \begin{enumerate}
     \item $(1) \Rightarrow (2)$ Пусть граф связный. Из этого следует существование $\ge 1$ простого пути между любыми двумя вершинами.
 
-    Пусть существуют $v_s, v_t \in V$, между которыми существует $\ge 2$ простых пути. Рассмотрим $E_1, E_2$ --- ребра первого и второго пути. Очевидно, что их \texttt{xor} ($E_1 \cup E_2 \setminus E_1 \cap E_2$) --- объединение циклов. 
+    Пусть существуют $v_s, v_t \in V$, между которыми существует $\ge 2$ простых пути. Рассмотрим $E_1, E_2$ --- ребра первого и второго пути. Тогда их симметрическая разность $E_1 \,\Delta\, E_2$ является объединением циклов, то есть в графе есть цикл — противоречие с (1).
 
     \item $(2) \Rightarrow (3)$ Связность графа следует из того, что между любыми вершинами существует путь.
 
-    Докажем по индукции, что в таком графе на $n$ вершин ровно $n - 1$ ребро.
+    Докажем по индукции по $|V|$, что тогда $|E|=|V|-1$.
 
-    \textbf{База.} $n = 1$. Тогда ребер нет.
-    
-    \textbf{Переход.} Рассмотрим граф с $k + 1$ вершиной. Возьмем произвольную вершину $v$ и рассмотрим подграф $G' = \langle V \setminus \{v\}, \{{e \in E \mid v \notin e}\}\rangle$. $v$ инцидентна $\ge 1$ ребру, т. к. граф связный. Если ей инцидентно $\ge 2$ ребра, то рассмотрим вершины $u_1, u_2$, которым они инцидентны. Т. к. в подграфе $G'$ между ними существует простой путь, то существуют  $\ge 2$ простых пути из $v$ в $u_1$: $v \to u_1$ и $v \to u_2 \rightsquigarrow u_1$. Следовательно $G'$ и $v$ соединяет ровно одно ребро.
+    \textbf{База.} $|V|=1$. Тогда $|E|=0$.
+
+    \textbf{Переход.} Пусть $|V|\ge 2$ и выполнено (2). Возьмём самый длинный простой путь $v_0\!-\!v_1\!-\!\dots\!-\!v_m$. Тогда вершина $v_0$ имеет степень $1$: иначе была бы вершина $u\neq v_1$, смежная с $v_0$, и путь можно было бы продлить. Удалим $v_0$ и инцидентное ей ребро; получим граф $G'$ на $|V|-1$ вершинах, в котором между любыми двумя вершинами по-прежнему существует ровно один простой путь (иначе в исходном графе было бы \(\ge 2\)). По предположению индукции $|E(G')|=|V(G')|-1$. Тогда
+    \[
+    |E| = |E(G')|+1 = (|V|-1-1)+1 = |V|-1.
+    \]
 
     \item $(3) \Rightarrow (4)$
     Предположим противное, пусть есть цикл. Тогда из него можно выделить простой цикл. Посмотрим на него: $v_1 \to v_2 \dots \to v_n \to v_1$. Для каждой вершины не из цикла рассмотрим первое ребро ее кратчайшего пути к вершине из цикла. Для каждой вершины это ребро будет уникальным. Но тогда в графе $\ge n + (|V| - n) = |V|$ ребер. 
