--- a/solutions/probability/24.tex
+++ b/solutions/probability/24.tex
@@ -210,7 +210,7 @@ D\xi = \mathbb{E}(\xi - \mathbb{E}\xi)^2 = \mathbb{E}(\xi - a)^2 = \int_{-\infty
 D\xi = \int_{-\infty}^{+\infty} \sigma^2 y^2 \frac{1}{\sqrt{2\pi}} e^{-\frac{y^2}{2}} dy = \sigma^2 \int_{-\infty}^{+\infty} y^2 \frac{1}{\sqrt{2\pi}} e^{-\frac{y^2}{2}} dy.
 \]
 
-Второй множитель - мат. ожидание квадрата стандартного нормального распределения (оно = 1, поверьте), значит
+Второй множитель — $\mathbb{E}Z^2$ для $Z\sim\mathcal{N}(0,1)$. Так как $DZ=1$ и $\mathbb{E}Z=0$, то $\mathbb{E}Z^2 = DZ + (\mathbb{E}Z)^2 = 1$. Значит
 \[
 D\xi = \sigma^2 \cdot 1 = \sigma^2.
 \]
