--- a/solutions/probability/25.tex
+++ b/solutions/probability/25.tex
@@ -14,7 +14,7 @@
 |\xi| = |\xi| \cdot I(|\xi| < x) + |\xi| \cdot I(|\xi| \geq x) = |\xi| (I(|\xi| < x) + I(|\xi| \geq x)) \geq |\xi| \cdot I(|\xi| \geq x) \geq x \cdot I(|\xi| \geq x).
 \]
 
-В первом переходе к неравенству воспользуемся свойством выше, во втором фактом того, что $|\xi| \geq x$ (ну или это выражение в любом случае = 0)
+В первом переходе к неравенству воспользуемся разложением по индикаторам, во втором — тем, что на событии $\{|\xi|\ge x\}$ выполнено $|\xi|\ge x$ (а вне его индикатор равен нулю).
 
 Тогда $\mathbb{E}|\xi| \geq \mathbb{E}(x \cdot I(|\xi| \geq x)) = x \cdot \mathbb{P}(|\xi| \geq x)$.
 
