--- a/solutions/probability/26.tex
+++ b/solutions/probability/26.tex
@@ -33,7 +33,7 @@ F_{\xi_n}(x) \rightarrow F_\xi(x) \quad \text{при}\ n \rightarrow \infty.
 Случайные величины $\xi_n$ слабо сходятся к случайной величине $\xi$ $\iff$ для любого $t$
 характеристические функции $\varphi_{\xi_n}(t)$ сходятся к характеристической функции $\varphi_\xi(t)$.
 
-\href{https://canizo.org/levy/}{Доказательство} не приводится из соображений сохранения ментального здоровья автора и читателей.
+Доказательство теоремы Леви (характеристические функции $\Leftrightarrow$ слабая сходимость) здесь опускается.
 
 \Theor{Центральная предельная теорема}
 
