--- a/solutions/probability/common.tex
+++ b/solutions/probability/common.tex
@@ -18,7 +18,7 @@
 \begin{enumerate}
     \item $\mathbb{P}(A) \geq 0 \quad \forall A \in \mathcal{F}$ \; (неотрицательность);
     \item $\mathbb{P}(\Omega) = 1$ \; (нормировка);
-    \item $\forall A_1, A_2, \ldots, A_n, \ldots \in \mathcal{F}$, $A_i A_j = \varnothing$ $(i \neq j): \mathbb{P}\left(\bigcup_{i=1}^{\infty} A_i\right) = \sum_{i=1}^{\infty} \mathbb{P}(A_i)$ \; (счётная аддитивность).
+    \item $\forall A_1, A_2, \ldots, A_n, \ldots \in \mathcal{F}$, $A_i \cap A_j = \varnothing$ $(i \neq j): \mathbb{P}\left(\bigcup_{i=1}^{\infty} A_i\right) = \sum_{i=1}^{\infty} \mathbb{P}(A_i)$ \; (счётная аддитивность).
 \end{enumerate}
 
 \Def \textit{Вероятностное пространство} — тройка $(\Omega, \mathcal{F}, \mathbb{P})$, где $\Omega$ — множество элементарных исходов, $\mathcal{F}$ — $\sigma$-алгебра над $\Omega$, вероятность $\mathbb{P}$ определена на $\mathcal{F}$.
