--- a/solutions/harmonic/14.tex
+++ b/solutions/harmonic/14.tex
@@ -1,6 +1,6 @@
 \subsection{Достаточные условия равномерной сходимости тригонометрического ряда Фурье.}
 
-\subsubsection{Представление частичной суммы ряда Фурье с ядром Фейера}
+\textbf{Представление частичной суммы ряда Фурье с ядром Фейера}
 
 \Def Будем говорить, что $x_n$ сходится к $a$ по Чизаро, если $\frac{x_1 + \dots + x_n}{n} \to a$, при $n \to \infty$.
 
@@ -9,14 +9,14 @@
 Распишем:
 
 \begin{gather*}
-    \sigma_n(x)  = \frac{1}{n+1} \sum_{i=0}^n \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) D_n(t) \,dt = \\
-    = \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) \frac{\sum_{i=0}^n D_n(t)}{n+1} \,dt = \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) F_n(t) \,dt,
+    \sigma_n(x)  = \frac{1}{n+1} \sum_{i=0}^n \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) D_i(t) \,dt = \\
+    = \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) \frac{\sum_{i=0}^n D_i(t)}{n+1} \,dt = \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) F_n(t) \,dt,
 \end{gather*}
 
 где $F_n(t)$ -- ядро Фейера. Распишем его:
 
 \begin{gather*}
-    F_n(t) \coloneqq \frac{\sum_{i=0}^n D_n(t)}{n+1} = \frac{1}{(n+1)\sin \frac{t}{2}} \sum_{k=0}^n \sin \left(\left(k + \frac{1}{2}\right)t\right) = \\
+    F_n(t) \coloneqq \frac{\sum_{i=0}^n D_i(t)}{n+1} = \frac{1}{(n+1)\sin \frac{t}{2}} \sum_{k=0}^n \sin \left(\left(k + \frac{1}{2}\right)t\right) = \\
     = \frac{1}{(n+1)\sin^2 \frac{t}{2}} \sum_{k=0}^n \sin\left(\frac{t}{2}\right) \sin \left(\left(k + \frac{1}{2}\right)t\right) =
     \frac{1}{2 (n+1)\sin^2 \frac{t}{2}} \sum_{k=0}^n \left(\cos kt - \cos ((k+1) t)\right) \\
     = \frac{1}{2 (n+1)\sin^2 \frac{t}{2}} \left(1 - \cos ((n+1)t)\right) = \frac{1}{n+1} \frac{\sin^2 \left(\frac{n+1}{2} t\right)}{\sin^2 \frac{t}{2}}
@@ -33,7 +33,7 @@
 \end{enumerate}
 
 
-\subsubsection{Теорема Фейера}
+\textbf{Теорема Фейера}
 
 Пусть $f: \R \to \Cmp$ -- $2\pi$-периодическая; $f \in |I|([-\pi, \pi])$.
 
